--- a/config/database.yml
+++ b/config/database.yml
@@ -10,45 +10,28 @@
 #   http://dev.mysql.com/doc/refman/5.7/en/old-client.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
+  adapter: oracle_enhanced
   pool: 5
-  username: root
-  password: d4nnocorpmx
-  socket: /var/lib/mysql/mysql.sock
+  timeout: 5000
 
 development:
   <<: *default
-  database: Alpura_development
+  database: //172.108.15.212:1521/BIAPSTR01
+  username: RUBYUSR
+  password: eca2f4ed4f
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: Alpura_test
+  database: //172.108.15.212:1521/BIAPSTR01
+  username: RUBYUSR
+  password: eca2f4ed4f
 
-# As with config/secrets.yml, you never want to store sensitive information,
-# like your database password, in your source code. If your source code is
-# ever seen by anyone, they now have access to your database.
-#
-# Instead, provide the password as a unix environment variable when you boot
-# the app. Read http://guides.rubyonrails.org/configuring.html#configuring-a-database
-# for a full rundown on how to provide these environment variables in a
-# production deployment.
-#
-# On Heroku and other platform providers, you may have a full connection URL
-# available as an environment variable. For example:
-#
-#   DATABASE_URL="mysql2://myuser:mypass@localhost/somedatabase"
-#
-# You can use this database configuration with:
-#
-#   production:
-#     url: <%= ENV['DATABASE_URL'] %>
-#
 production:
   <<: *default
-  database: Alpura_production
-  username: Alpura
-  password: <%= ENV['ALPURA_DATABASE_PASSWORD'] %>
+  database: //172.108.15.212:1521/BIAPSTR01
+  username: RUBYUSR
+  password: eca2f4ed4f
